# cutt

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  TensorTester.cu  cuttGpuModelKernel.cu  cuttkernel.cu
